# PromptBattle

./: .dockerignore  .env.sample  .gitignore  ABOUT.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  promptbattle.service  pyproject.toml  run.py  start.sh
backend/: config.py  game_state.py  main.py  models.py  requirements.txt
backend/routes/: game.py  ws.py
backend/services/: history.py  image_generator.py  similarity.py  target_images.py  telegram.py
frontend/: package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/: websocket.ts
frontend/src/lib/components/: GeneratedImage.svelte  MultiplayerGame.svelte  MultiplayerResult.svelte  PromptInput.svelte  QRLobby.svelte  RoundInfo.svelte  ScoreDisplay.svelte  TargetImage.svelte  Timer.svelte
frontend/src/lib/stores/: gameStore.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/play/[gameId]/[token]/: +page.svelte
target_images/: IMG_5133.HEIC
